--- a/src/options.html
+++ b/src/options.html
@@ -20,7 +20,10 @@
     <div class="text-slate-100">
         <div class="bg-[#1e1e1f] text-slate-100 p-8 rounded-t-[25px] shadow-lg w-110"
             style="background-size: 100% 100%;background-position: 0px 0px,0px 0px,0px 0px;background-image: radial-gradient(45% 50% at 99% 1%, #FFDA1A08 13%, #F000 99%);">
-            <h1 class="text-3xl font-bold mb-1 text-slate-100">YouTube Remote</h1>
+            <div class="flex space-x-2 w-full text-nowrap mb-2 text-white">
+                <h1 class="text-3xl font-bold mb-1 text-slate-100">YouTube Remote</h1>
+                <b id="version" class="text-xs text-slate-100/10 font">v0.1.3</b>
+            </div>
             <p class="mb-4 text-slate-100/20">Control Youtube players on the same network</p>
             <div class="mb-2 flex items-center group">
                 <label for="recID"
@@ -37,7 +40,7 @@
                         <path stroke-linecap="round" stroke-linejoin="round"
                             d="M13.19 8.688a4.5 4.5 0 0 1 1.242 7.244l-4.5 4.5a4.5 4.5 0 0 1-6.364-6.364l1.757-1.757m13.35-.622 1.757-1.757a4.5 4.5 0 0 0-6.364-6.364l-4.5 4.5a4.5 4.5 0 0 0 1.242 7.244" />
                     </svg>
-                    <p class="text-white/40 group-hover:text-white transition">
+                    <p id="connectText" class="text-white/40 group-hover:text-white transition">
                         Connect
                     </p>
                 </div>
@@ -46,7 +49,12 @@
         <div class="bg-[#1e1e1f] text-slate-100 p-8 rounded-b-[25px] shadow-lg w-110 mt-2"
             style="background-size: 100% 100%;background-position: 0px 0px,0px 0px,0px 0px;background-image: radial-gradient(33% 43% at 5% 93%, #FFD60008 7%, #073AFF00 100%);">
             <div class="container mb-4 bg-[#141415] rounded-md border border-white/10" style="height: 200px;">
+                <img id="artwork" style="height: 100%;object-fit: contain;display: block;margin-left: auto;margin-right: auto;" src="" >
+            </div>
 
+            <div style="width: 400px;">
+                <p id="title" style="font-size: large;width: fit-content;">Nothing</p>  
+                <p id="artist" class="mb-4 text-slate-100/40">The silence is deafening</p>
             </div>
 
             <div class="group mb-4 flex items-center space-x-4 opacity-45 hover:opacity-90 transition">
@@ -96,7 +104,7 @@
                     </div>
                 </button>
             </div>
-            <p id="status" class="text-center font-bold text-slate-100/20 mt-2 select-none">Warming up</p>
+            <p id="status" class="text-center font-bold text-slate-100/20 mt-2 select-none">Plz wait</p>
         </div>
     </div>
     <script src="options.js"></script>
