--- a/src/popup.html
+++ b/src/popup.html
@@ -19,13 +19,12 @@
 
 <body class="p-2">
     <div class="flex space-x-2 justify-center w-full text-nowrap mb-2 text-white    ">
-        <p class="text-lg font-bold text-slate-100/80">Youtube Remote</p> <b
-            class="text-xs text-slate-100/30 font">v0.1.3</b>
+        <p class="text-lg font-bold text-slate-100/80">Youtube Remote</p>
+        <b id="version" class="text-xs text-slate-100/30 font">v0.1.3</b>
     </div>
 
     <div class="mb-1 flex items-center group w-full" id="peer-id">
-        <div
-            class="h-[28px] mr-2 text-slate-100/60 py-[4px] px-4 rounded-md border border-white/10">
+        <div class="h-[28px] mr-2 text-slate-100/60 py-[4px] px-4 rounded-md border border-white/10">
             ID:</div>
         <div id="id"
             class="h-[28px] group-hover:text-white text-slate-100 py-[4px] px-2 rounded-md border border-white/10 transition w-full">
