--- a/src/options.html
+++ b/src/options.html
@@ -26,10 +26,10 @@
             </div>
             <p class="mb-4 text-slate-100/20">Control Youtube players on the same network</p>
             <div class="mb-2 flex items-center group">
-                <label for="recID"
-                    class="group-hover:text-white font-medium mr-2 bg-[#18181B]/50 backdrop-blur-lg text-slate-100/30 py-2 px-4 rounded-md border border-white/10 transition">ID:</label>
+                <div for="recID"
+                    class="h-[42px] mr-2 bg-[#18181B]/50 backdrop-blur-lg text-slate-100/30 py-2 px-4 rounded-md border border-white/10 transition"><p class="group-hover:text-white font-medium transition text-slate-100/40 text-base/6">ID:</p></div>
                 <input type="text" id="recID" title="YouTube Remote ID"
-                    class="text-slate-100 text-base/6 placeholder:text-zinc-500 font-medium p-2 w-full rounded-md border border-white/10 text-slate-100 shadow-sm hover:ring-1 hover:ring-white/10 focus:ring-1 focus:ring-white/10 transition appearance-none rounded-lg focus:outline-none bg-[#18181B]/50 backdrop-blur-lg">
+                    class="h-[42px] text-slate-100 text-base/6 placeholder:text-zinc-500 font-medium p-2 w-full rounded-md border border-white/10 text-slate-100 shadow-sm hover:ring-1 hover:ring-white/10 focus:ring-1 focus:ring-white/10 transition appearance-none rounded-lg focus:outline-none bg-[#18181B]/50 backdrop-blur-lg">
             </div>
 
             <button id="connectButton"
