--- a/src/popup.html
+++ b/src/popup.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>YouTube Remote v0.1.3</title>
+    <title>YouTube Remote</title>
     <meta http-equiv="content-type" content="text/html; charset=windows-1252">
     <style>
         body {
