--- a/src/options.html
+++ b/src/options.html
@@ -166,7 +166,7 @@
                                                 <img alt="PEER JS"
                                                     src="https://avatars.githubusercontent.com/u/3409784?s=200&v=4"
                                                     class="inline-block h-14 w-14 rounded-md" />
-                                                <div class="w-full font-semibold flex space-x-1">
+                                                <div class="w-full font-semibold flex items-center justify-center space-x-1">
                                                     <p>PEER</p>
                                                     <p class="text-red-400">JS</p>
                                                 </div>
