--- a/src/popup.html
+++ b/src/popup.html
@@ -18,9 +18,9 @@
 </head>
 
 <body class="p-2">
-    <div class="flex space-x-2 justify-center w-full text-nowrap mb-2 text-white    ">
+    <div class="flex space-x-2 justify-center w-full text-nowrap mb-2 text-white">
         <p class="text-lg font-bold text-slate-100/80">Youtube Remote</p>
-        <b id="version" class="text-xs text-slate-100/30 font">v0.1.3</b>
+        <b id="version" class="text-xs text-slate-100/30 font"></b>
     </div>
 
     <div class="mb-1 flex items-center group w-full" id="peer-id">
